--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
-                <img src="images/academic.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+                <img src="academic.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
                     height="500" loading="lazy">
             </div>
             <div class="col-lg-6">
